--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ name: Eugene Kim
 title: PhD Student 
 email: egkim0103@kaist.ac.kr
 # email_title: Email (Email title override)
-phone: Your phone number (optional)
+phone: 010-9629-9901
 # phone_title: Phone (Phone title override)
-website: Your website (eg. https://google.com)(optional)
+# website: Your website (eg. https://google.com)(optional)
 # website_title: Web (Website title override)
 
 # Dark Mode (true/false/never)
@@ -34,10 +34,10 @@ darkmode: true
 #googlescholar_username: D847cGsAAAAJ
 
 # Additional icon links
-additional_links:
-- title: Link name
-  icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
-  url: Link url (eg. https://google.com)
+# additional_links:
+# - title: Link name
+#  icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
+#  url: Link url (eg. https://google.com)
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 #   url: Link url (eg. https://google.com)
@@ -61,38 +61,38 @@ about_content: | # this will include new lines to allow paragraphs
     - Images ![alt text](/images/landscape-trees.jpg "Trees")
 
 content:
-  - title: Projects # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        border: weak  # Value of `weak` will display a weak border below this item. # Any 
-                      # other value (or no value) means no border will be displayed
-        title: Project name
-        link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-        link_text: Link Text
-        additional_links:
-          - title:  Github page for project (eg. sproogen/modern-resume-theme)
-            icon: fab fa-github
-            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-          - title:  Github page for project (eg. sproogen/modern-resume-theme)
-            icon: fab fa-github
-            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-        quote: >
-          Short overview of the project (optional)
-        description: | # this will include new lines to allow paragraphs
-          Description about the work on/with the project
-  - title: Experience
-    layout: list
-    content:
-      - layout: right
-        title: Company name
-        sub_title: Job title
-        caption: Date Range (eg. November 2016 - present)
-        link: Link to company (optional)
-        quote: >
-          Short description of the company (optional)
-        description: | # this will include new lines to allow paragraphs
-          Description of role
+  #- title: Projects # Title for the section
+  #  layout: list # Type of content section (list/text)
+  #  content:
+  #    - layout: left
+  #      border: weak  # Value of `weak` will display a weak border below this item. # Any 
+  #                    # other value (or no value) means no border will be displayed
+  #      title: Project name
+  #      link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+  #      link_text: Link Text
+  #      additional_links:
+  #        - title:  Github page for project (eg. sproogen/modern-resume-theme)
+  #          icon: fab fa-github
+  #          url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+  #        - title:  Github page for project (eg. sproogen/modern-resume-theme)
+  #          icon: fab fa-github
+  #          url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+  #      quote: >
+  #        Short overview of the project (optional)
+  #      description: | # this will include new lines to allow paragraphs
+  #        Description about the work on/with the project
+  #- title: Experience
+  #  layout: list
+  #  content:
+  #    - layout: right
+  #      title: Company name
+  #      sub_title: Job title
+  #      caption: Date Range (eg. November 2016 - present)
+  #      link: Link to company (optional)
+  3      quote: >
+  #        Short description of the company (optional)
+  #      description: | # this will include new lines to allow paragraphs
+  #        Description of role
   - title: Education
     layout: list
     content:
