--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: Eugene Kim
 title: PhD Student 
 email: egkim0103@kaist.ac.kr
 # email_title: Email (Email title override)
-phone: 010-9629-9901
+phone: 82 010-9629-9901
 # phone_title: Phone (Phone title override)
 # website: Your website (eg. https://google.com)(optional)
 # website_title: Web (Website title override)
