--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ content:
   #      sub_title: Job title
   #      caption: Date Range (eg. November 2016 - present)
   #      link: Link to company (optional)
-  3      quote: >
+  #3      quote: >
   #        Short description of the company (optional)
   #      description: | # this will include new lines to allow paragraphs
   #        Description of role
