--- a/_config.yml
+++ b/_config.yml
@@ -98,10 +98,18 @@ content:
     content:
       - layout: top-left
         title: KAIST
+        sub_title: Ph.D in Management Engineering 
+        caption: March 2023 ~ Current
+        quote: >
+          Major in IT Management (Management Information Systems)
+          Advisor: Jinsoo Han
+      - layout: top-left
+        title: KAIST
         sub_title: M.S. in Management Engineering
         caption: March 2021 - Feburary 2023
         quote: >
-          Quantitative Research Using Huge Clickstream Data of Korean Domestic Newspaper (Advisor: Daegon Cho)
+          Major in IT Management (Management Information Systems)
+          Advisor: Daegon Cho
        # description: | # this will include new lines to allow paragraphs
        #  Description of qualification
       - layout: top-left
@@ -109,7 +117,7 @@ content:
         sub_title: B.A. in Media Communication
         caption: March 2017 - Feburary 2021
         quote: >
-          With First Class Honor 
+          Graduated with First Class Honor 
        # description: | # this will include new lines to allow paragraphs
        #  Description of qualification
   - title: Fellowship
@@ -124,10 +132,10 @@ content:
        # description: | # this will include new lines to allow paragraphs
        #  Description of qualification
       - layout: top-right
-        title: PhD Fellowship
+        title: PhD Research Fellowship
         sub_title: Ministry of Education of the Republic of Korea and the National Research Foundation of Korea
       - layout: top-right
-        title: Merit Scholarship
+        title: Undergraduate Merit Scholarship
         sub_title: National Excellence Scholarship for Humanities, Korea Student Aid Foundation (KOSAF)
         # caption: March 2017 - Feburary 2021
         # quote: >
