--- a/_config.yml
+++ b/_config.yml
@@ -99,17 +99,17 @@ content:
       - layout: top-left
         title: KAIST
         sub_title: Ph.D in Management Engineering 
-        caption: March 2023 ~ Current
+        caption: March 2023 ~ Present
         quote: |
           Major in IT Management (Management Information Systems)
-          Advisor: Jinsoo Han
+          Advisor: Dr. Jinsoo Han
       - layout: top-left
         title: KAIST
         sub_title: M.S. in Management Engineering
         caption: March 2021 - Feburary 2023
         quote: |
           Major in IT Management (Management Information Systems)
-          Advisor: Daegon Cho
+          Advisor: Dr. Daegon Cho
        # description: | # this will include new lines to allow paragraphs
        #  Description of qualification
       - layout: top-left
@@ -124,7 +124,7 @@ content:
     layout: list
     content:
       - layout: top-right
-        title: PhD Fellowship 
+        title: KAIST Doctoral Fellowship 
         sub_title: School of Management Engineering, KAIST College of Business
        # caption: 
        #  quote: >
@@ -132,7 +132,7 @@ content:
        # description: | # this will include new lines to allow paragraphs
        #  Description of qualification
       - layout: top-right
-        title: PhD Research Fellowship
+        title: NRF Doctoral Research Fellowship
         sub_title: Ministry of Education of the Republic of Korea and the National Research Foundation of Korea
       - layout: top-right
         title: Undergraduate Merit Scholarship
