--- a/_config.yml
+++ b/_config.yml
@@ -101,14 +101,14 @@ content:
         sub_title: Ph.D in Management Engineering 
         caption: March 2023 ~ Present
         quote: |
-          Major in IT Management (Management Information Systems)
+          Major in IT Management (Management Information Systems) <br>
           Advisor: Dr. Jinsoo Han
       - layout: top-left
         title: KAIST
         sub_title: M.S. in Management Engineering
         caption: March 2021 - Feburary 2023
         quote: |
-          Major in IT Management (Management Information Systems)
+          Major in IT Management (Management Information Systems) <br>
           Advisor: Dr. Daegon Cho
        # description: | # this will include new lines to allow paragraphs
        #  Description of qualification
