--- a/_config.yml
+++ b/_config.yml
@@ -133,7 +133,7 @@ content:
        #  Description of qualification
       - layout: top-right
         title: NRF Doctoral Research Fellowship
-        sub_title: Ministry of Education of the Republic of Korea and the National Research Foundation of Korea
+        sub_title: Ministry of Education of the Republic of Korea & the National Research Foundation of Korea (NRF)
       - layout: top-right
         title: Undergraduate Merit Scholarship
         sub_title: National Excellence Scholarship for Humanities, Korea Student Aid Foundation (KOSAF)
