--- a/_config.yml
+++ b/_config.yml
@@ -58,10 +58,11 @@ about_content: | # this will include new lines to allow paragraphs
   <br>
   Research Interests
     - Economics of Information Systems 
-    - Behavioral IS 
+    - Business Analytics 
     - Digital News Consumption 
-    - Media and Entertainments 
+    - Media and Entertainment
     - Various Type of Polarization
+    - Applications of AI 
       
 # this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
 
@@ -113,14 +114,14 @@ content:
         caption: March 2023 - Present
         quote: |
           Major in IT Management (Management Information Systems) <br>
-          Advisor: Dr. Jinsoo Han (Currently at KAIST)
+          Advisor: [Dr. Jin soo Han](https://sites.google.com/view/jinsoohan/home?authuser=0) (Currently at KAIST)
       - layout: top-left
         title: KAIST
         sub_title: M.S. in Management Engineering
         caption: March 2021 - February 2023
         quote: |
           Major in IT Management (Management Information Systems) <br>
-          Advisor: Dr. Daegon Cho (Currently at Yonsei Univ.)
+          Advisor: [Dr. Daegon Cho](https://ysb.yonsei.ac.kr/faculty.asp?mid=n02&sOpt=&uid=297) (Currently at Yonsei Univ.)
        # description: | # this will include new lines to allow paragraphs
        #  Description of qualification
       - layout: top-left
