--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ content:
         caption: March 2021 - February 2023
         quote: |
           Major in IT Management (Management Information Systems) <br>
-          Advisor: [Dr. Daegon Cho](https://ysb.yonsei.ac.kr/faculty.asp?mid=n02&sOpt=&uid=297) (Currently at Yonsei Univ.)
+          Advisor: <a href="https://ysb.yonsei.ac.kr/faculty.asp?mid=n02&sOpt=&uid=297" target="_blank">Dr. Daegon Cho</a> (Currently at Yonsei Univ.)
        # description: | # this will include new lines to allow paragraphs
        #  Description of qualification
       - layout: top-left
