--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ content:
         caption: March 2023 - Present
         quote: |
           Major in IT Management (Management Information Systems) <br>
-          Advisor: <a href="https://sites.google.com/view/jinsoohan/home?authuser=0" target="_blank">Dr. Jin Soo Han</a> (Currently at Yonsei Univ.)
+          Advisor: <a href="https://sites.google.com/view/jinsoohan/home?authuser=0" target="_blank">Dr. Jin Soo Han</a> (Currently at KAIST)
       - layout: top-left
         title: KAIST
         sub_title: M.S. in Management Engineering
